--- a/docs/contents.css
+++ b/docs/contents.css
@@ -1,243 +1,136 @@
-/*
-Copyright (c) 2003-2021, CKSource - Frederico Knabben. All rights reserved.
-For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
-*/
-
-.collapse {
-    padding: 8px;
-    margin: 10px;
-    background: #eee;
-    border-radius: 8px;
-    border: 1px solid #ddd;
-    box-shadow: 0 1px 1px #fff inset, 0 -1px 0 #ccc inset;
-}
-
-.collapse-title, .collapse-content {
-    box-shadow: 0 1px 1px #ddd inset;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
-    background: #fff;
-}
-
-.collapse-title {
-    margin: 0 0 8px;
-    padding: 5px 8px;
-    font-weight: bold;
-}
-
-.collapse-content {
-    padding: 0 8px;
-}
-
-.dice {
-    background: #eee;
-    border-radius: 8px;
-    border: 1px solid #ddd;
-    box-shadow: 0 1px 1px #fff inset, 0 -1px 0 #ccc inset;
-    padding: 7px;
-    width: fit-content;
-}
-
-.dice-expression {
-    display: inline-block;
-    min-width: 50px;
-    background-color: white;
-}
-
 .mask {
     display: inline-block;
 }
-
-.mask:not(:hover),.mask:not(:hover) * {
-    border: none;
-    background: rgba(0,0,0,1) !important;
+.mask:not(:hover) * {
+    opacity:0;
+}
+.mask:not(:hover), .mask:not(:hover) * {
+    border-color: rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 1) !important;
     color: black;
 }
 
 .dice {
-    display: inline-block;
+    background: #eee;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    padding: 7px;
     width: fit-content;
-    height: 25px;
-    border: skyblue solid 2px;
-    box-sizing: border-box;
-    background-color: burlywood;
-    color: dimgray;
-    overflow: hidden;
-    white-space: nowrap;
+    word-break: break-all;
 }
 
-body {
-    /* Font */
-    /* Emoji fonts are added to visualise them nicely in Internet Explorer. */
-    font-family: sans-serif, Arial, Verdana, "Trebuchet MS", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 12px;
-
-    /* Text color */
-    color: #333;
-
-    /* Remove the background color to make it transparent. */
-    background-color: #fff;
-
-    margin: 20px;
+.dice .dice-prefix, .dice .dice-expression, .dice .dice-sum {
+    font-weight: bold;
 }
 
-.cke_editable {
-    font-size: 13px;
-    line-height: 1.6;
-
-    /* Fix for missing scrollbars with RTL texts. (#10488) */
-    word-wrap: break-word;
+div[data-tag=video] iframe {
+    height: 600px;
 }
 
 blockquote {
-    font-family: Georgia, Times, "Times New Roman", serif;
-    padding: 2px 0;
-    border-style: solid;
-    border-color: #ccc;
-    border-width: 0;
+    padding-left: 1em;
+    margin: 1em 0;
+    color: #6b7a8c;
+    border-left: 4px solid #cfd8e6;
 }
 
-.cke_contents_ltr blockquote {
-    padding-left: 20px;
-    padding-right: 8px;
-    border-left-width: 5px;
+
+/* region ambox */
+.ambox table {
+    font-size: 95%;
+    width: 80% !important;
+    border-collapse: collapse;
+    border-radius: 5px;
+    padding: 25px;
+    margin: 0 auto 10px;
 }
 
-.cke_contents_rtl blockquote {
-    padding-left: 8px;
-    padding-right: 20px;
-    border-right-width: 5px;
+.ambox td {
+    padding: 0 !important;
+    border: none !important;
 }
 
-a {
-    color: #0782C1;
-}
-
-ol, ul, dl {
-    /* IE7: reset rtl list margin. (#7334) */
-    *margin-right: 0px;
-    /* Preserved spaces for list items with text direction different than the list. (#6249,#8049)*/
-    padding: 0 40px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
-    line-height: 1.2;
-}
-
-hr {
-    border: 0px;
-    border-top: 1px solid #ccc;
-}
-
-img.right {
-    border: 1px solid #ccc;
-    float: right;
-    margin-left: 15px;
-    padding: 5px;
-}
-
-img.left {
-    border: 1px solid #ccc;
-    float: left;
-    margin-right: 15px;
-    padding: 5px;
-}
-
-pre {
-    white-space: pre-wrap; /* CSS 2.1 */
-    word-wrap: break-word; /* IE7 */
-    -moz-tab-size: 4;
-    tab-size: 4;
-}
-
-.marker {
-    background-color: Yellow;
-}
-
-span[lang] {
-    font-style: italic;
-}
-
-figure {
+.ambox-image {
+    width: 80px;
     text-align: center;
-    outline: solid 1px #ccc;
-    background: rgba(0, 0, 0, 0.05);
-    padding: 10px;
-    margin: 10px 20px;
-    display: inline-block;
 }
 
-figure > figcaption {
-    text-align: center;
-    display: block; /* For IE8 */
+.ambox-image img {
+    max-width: 100%;
+    padding: 0 !important;
+    border: none !important;
+    border-radius: 0;
+    margin-bottom: 0;
 }
 
-a > img {
-    padding: 1px;
-    margin: 1px;
-    border: none;
-    outline: 1px solid #0782C1;
-}
-
-/* Widget Styles */
-.code-featured {
-    border: 5px solid red;
-}
-
-.math-featured {
-    padding: 20px;
-    box-shadow: 0 0 2px rgba(200, 0, 0, 1);
-    background-color: rgba(255, 0, 0, 0.05);
-    margin: 10px;
-}
-
-.image-clean {
+.ambox-notice {
+    padding: 0.25em 0.5em;
     border: 0;
-    background: none;
-    padding: 0;
 }
 
-.image-clean > figcaption {
-    font-size: .9em;
-    text-align: right;
+.notice-bubble {
+    position: relative;
+    display: inline-block;
+    background: #666;
+    color: #fff;
+    padding: 0.25em 0.5em;
+    margin: 0.2em 0;
+    border-radius: 0.3em
 }
 
-.image-grayscale {
-    background-color: white;
-    color: #666;
+.notice-bubble-line {
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-style: solid;
+    border-width: 0.25em 0.5em 0.25em 0;
+    border-color: transparent #666 transparent transparent;
+    left: -0.43em;
+    bottom: 0.5em;
 }
 
-.image-grayscale img, img.image-grayscale {
-    filter: grayscale(100%);
+.ambox-smalltext {
+    text-align:right;
 }
 
-.embed-240p {
-    max-width: 426px;
-    max-height: 240px;
-    margin: 0 auto;
+.ambox-blue {
+    border-left: 10px solid #1e90ff;
+    background-color: rgba(209, 216, 224, 0.5);
 }
 
-.embed-360p {
-    max-width: 640px;
-    max-height: 360px;
-    margin: 0 auto;
+.ambox-orange {
+    border-left: 10px solid #E67E22;
+    background-color: rgba(246, 221, 204, 0.5)
 }
 
-.embed-480p {
-    max-width: 854px;
-    max-height: 480px;
-    margin: 0 auto;
+.ambox-green {
+    border-left: 10px solid #28B463;
+    background-color: rgba(213, 245, 227, 0.5)
 }
 
-.embed-720p {
-    max-width: 1280px;
-    max-height: 720px;
-    margin: 0 auto;
+.ambox-violet {
+    border-left: 10px solid #8E44AD;
+    background-color: rgba(235, 222, 240, 0.5)
 }
 
-.embed-1080p {
-    max-width: 1920px;
-    max-height: 1080px;
-    margin: 0 auto;
+.ambox-red {
+    border-left: 10px solid #E74C3C;
+    background-color: rgba(250, 219, 216, 0.5)
+}
+
+.ambox-essence {
+    border-left: 10px solid #F47116;
+    background: linear-gradient(to right, #F4A754, #DFF559, transparent) !important;
+    background-size: 10px 10px;
+    background-position: 0 0, 15px 15px
+}
+
+/* endregion */
+
+.cke_reset_all table {
+    width: auto !important;
+}
+
+.jinsom-bbs-single-content a {
+    color: #2e9ad0;
 }
